
  ${OPT}_CONFIGURE_ENV will append the specified variables to CONFIGURE_ENV if
  OPT is 'on'
  ${OPT}_MAKE_ENV will append the specified variables to MAKE_ENV if OPT is 'on'

  ${OPT}_USES will append the speficied uses to USES if OPT is 'on'

  ${OPT}_DISTFILES will append the specified distiles to DISTFILES if OPT in 'on'

20130614:
AUTHOR: bapt@FreeBSD.org

  * New 'display' USES macro to handle building ports that may require a
    a display to build.

  USES= display[:install] will start Xvfb and set the DISPLAY environment
  variable before the installation phase and stop it at the end. (install is
  the implicit value)

  USES= display:build will start Xvfb and set the DISPLAY environment variable
  before the build phase and stop it at the end.

20130607:
AUTHOR: bdrewery@FreeBSD.org

  * Checks were added to block GH_TAGNAME=master as this is not a valid
    setup. A known hash or tag should be used for GH_TAGNAME instead of
    a branch name. As soon as a branch is updated, the known checksum
    in the distinfo would then be invalid.

20130606:
AUTHOR: bdrewery@FreeBSD.org

  * WRKSRC_SUBDIR has been added to simplify overriding WRKSRC
    to use a subdirectory:

  WRKSRC=		${WRKDIR}/${DISTNAME}/src

  Becomes:

  WRKSRC_SUBDIR=	src

20130606:
AUTHOR: bapt@FreeBSD.org

  The OPTIONS macro is no longer recognized, please use the new options
  framework.

20130509:
AUTHOR: kwm@FreeBSD.org

  * Two new USES macros to handle mime data of ports.

  USES= desktop-file-utils
	Handles MimeType in .desktop files that are installed in 
	share/applications.
  USES= shared-mime-info
	For supporting mime xml files installed in 
	share/mime/packages.

  The desktop-file-utils USES is only needed if the .desktop files
  installed by the port has a MimeType field. 
  USE_GNOME=desktopfileutils is deprecated.

  The shared-mime-info USES handles mime types xml files.
  Please note that only the packages/${NAME}.xml file should be listed in